--- a/R/analysis/02_growth_scaling_fit.Rmd
+++ b/R/analysis/02_growth_scaling_fit.Rmd
@@ -5,6 +5,7 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   html_document:
     df_print: paged
+    code_folding: hide
   pdf_document: default
 editor_options: 
   chunk_output_type: console
@@ -16,8 +17,8 @@ editor_options:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.width = 12,
-  fig.asp = 0.618,
+  # fig.width = 12,
+  # fig.asp = 0.618,
   fig.align ='center'
 )
 ```
@@ -45,11 +46,16 @@ sessionInfo()
 
 # For parallel processing
 options(mc.cores = parallel::detectCores()) 
+
+# Load cache
+# qwraps2::lazyload_cache_dir(path = "R/analysis/02_growth_scaling_fit_cache/html")
 ```
 
 ### Read data
 ```{r}
 d <- read.csv("data/for_fitting/growth_scaling_dat.csv")
+nrow(d) 
+length(unique(d$ID))
 ```
 
 ### Fit models
@@ -81,11 +87,12 @@ pp <- conditional_effects(M0fmbt, method = "posterior_predict")
 plot(pp, plot = FALSE)[[1]] +
   labs(y = expression(paste("Growth [%", yr^-1, "]")), x = "Length [cm]")
 
-ggsave("figures/supp/growth_prior_pred_check.png", width = 6.5, height = 6.5, dpi = 600)
+#ggsave("figures/supp/growth_prior_pred_check.png", width = 6.5, height = 6.5, dpi = 600)
+ggsave("figures/supp/growth_prior_pred_check.pdf", width = 20, height = 20, unit = "cm")
 ```
 
 M1: All parameters area-specific
-```{r M1: All parameters area-specific, cache = TRUE}
+```{r M1: All parameters area-specific, cache=TRUE}
 prior <-
   prior(normal(500, 100), nlpar = "alphaW") +
   prior(normal(500, 100), nlpar = "alphaC") +
@@ -117,7 +124,7 @@ prior_summary(m1)
 ```
 
 M2: Common theta parameter
-```{r M2: Common theta parameter, cache = TRUE}
+```{r M2: Common theta parameter, cache=TRUE}
 prior2 <-
   prior(normal(500, 100), nlpar = "alphaW") +
   prior(normal(500, 100), nlpar = "alphaC") +
@@ -145,12 +152,11 @@ proc.time() - ptm
 ```
 
 ### Compare models
+
 ```{r compare models}
 # Compare models: https://mc-stan.org/loo/articles/loo2-example.html
 # Expected log pointwise predictive density
 
-# loo_m1 <- loo(m1, moment_match = TRUE)
-# loo_m2 <- loo(m2, moment_match = TRUE)
 loo_m1 <- loo(m1, moment_match = TRUE)
 loo_m2 <- loo(m2, moment_match = TRUE)
 
@@ -161,9 +167,6 @@ plot(loo_m2)
 abline(a = 0.7, b = 0)
 
 loo_compare(loo_m1, loo_m2)
-# elpd_diff se_diff
-# m1  0.0       0.0   
-# m2 -2.7       4.4
 ```
 
 ### Figures
@@ -251,12 +254,14 @@ prop_diff_alpha <- diff %>%
 prop_diff_theta <- diff %>% 
   summarise(Proportion_of_the_difference_below_0 = sum(diff_theta < 0) / length(diff_theta))
 
+round(prop_diff_alpha, 3)
+
 # https://bookdown.org/content/3890/interactions.html
 post_diff_alpha <- ggplot(diff, aes(x = diff_alpha, fill = stat(x > 0))) +
   stat_halfeye(alpha = 0.5, size = 5, .width = 0) +
   guides(fill = guide_legend(override.aes = list(size = 1, shape = NA, linetype = 0)), color = "none") + 
   scale_fill_manual(values = c("grey10", "grey70")) +
-  annotate("text", 130, 0.95, size = 3, label = paste("prop. diff<0=", round(prop_diff_alpha, 3), sep = "")) +
+  #annotate("text", 130, 0.95, size = 3, label = paste("prop. diff<0=", round(prop_diff_alpha, 3), sep = "")) +
   labs(x = expression(~italic("\u03B1")[heat]~-~italic("\u03B1")[ref])) +
   theme(legend.position = c(0.2, 0.7),
         legend.key.size = unit(0.2, "cm"),
@@ -264,11 +269,13 @@ post_diff_alpha <- ggplot(diff, aes(x = diff_alpha, fill = stat(x > 0))) +
         legend.title = element_text(size = 10),
         legend.background = element_blank())
 
+round(prop_diff_theta, 3)
+
 post_diff_theta <- ggplot(diff, aes(x = diff_theta, fill = stat(x > 0))) +
   stat_halfeye(alpha = 0.5, size = 5, .width = 0) +
   guides(fill = guide_legend(override.aes = list(size = 1, shape = NA, linetype = 0)), color = "none") + 
   scale_fill_manual(values = c("grey10", "grey70")) +
-  annotate("text", 0.07, 0.95, size = 3, label = paste("prop. diff<0=", round(prop_diff_theta, 3), sep = "")) +
+  #annotate("text", 0.07, 0.95, size = 3, label = paste("prop. diff<0=", round(prop_diff_theta, 3), sep = "")) +
   labs(x = expression(~italic("\u03B8")[heat]~-~italic("\u03B8")[ref])) +
   theme(legend.position = c(0.2, 0.7),
         legend.key.size = unit(0.2, "cm"),
@@ -277,11 +284,15 @@ post_diff_theta <- ggplot(diff, aes(x = diff_theta, fill = stat(x > 0))) +
         legend.background = element_blank())
 
 # Plotting all together
+# Need hacky cairo solution...
+# 7,87402 = 20cm
+grDevices::cairo_pdf("figures/growth_pred.pdf", width = 7.87402, height = 7.87402)
+
 pscatter / ((post_alpha/post_diff_alpha) | (post_theta/post_diff_theta)) +
   plot_layout(heights = c(1.2, 1)) +
   plot_annotation(tag_levels = 'A')
 
-ggsave("figures/growth_pred.png", width = 6.5, height = 6.5, dpi = 600)
+dev.off()
 ```
 
 #### Supporting figures
@@ -384,7 +395,16 @@ bottom <- prior_post_theta + inset_element(prior_post_theta_ins, left = 0.55, bo
 
 top / bottom + plot_annotation(tag_levels = list(c('A', 'B'), ''))
 
-ggsave("figures/supp/growth_prior_post.png", width = 6.5, height = 8.5, dpi = 600)
+#ggsave("figures/supp/growth_prior_post.png", width = 6.5, height = 8.5, dpi = 600)
+
+
+# Plotting all together
+# Need hacky cairo solution...
+# 7,87402 = 20cm
+grDevices::cairo_pdf("figures/supp/growth_prior_post.pdf", width = 7.87402, height = 7.87402)
+top / bottom + plot_annotation(tag_levels = list(c('A', 'B'), ''))
+dev.off()
+# ggsave("figures/supp/growth_prior_post.pdf", width = 20, height = 20, unit = "cm")
 ```
 
 Model diagnostics & fit
@@ -458,10 +478,12 @@ d4 <- pp_check(m1) +
         legend.position = c(0.15, 0.95),
         legend.background = element_rect(fill = NA)) + 
   scale_color_manual(values = rev(pal_diag)) +
-  labs(color = "")
+  labs(color = "",
+       x = expression(paste("Growth [%", yr^-1, "]")))
 
 d1 / (d2 / (d3 + d4)) +
   plot_annotation(tag_levels = 'A')
 
-ggsave("figures/supp/growth_diag_fit.png", width = 6.5, height = 8.5, dpi = 600)
+#ggsave("figures/supp/growth_diag_fit.png", width = 6.5, height = 8.5, dpi = 600)
+ggsave("figures/supp/growth_diag_fit.pdf", width = 20, height = 20, unit = "cm")
 ```
