--- a/R/analysis/03_catch_curves_fit.Rmd
+++ b/R/analysis/03_catch_curves_fit.Rmd
@@ -5,6 +5,7 @@ date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
   html_document:
     df_print: paged
+    code_folding: hide
   pdf_document: default
 editor_options: 
   chunk_output_type: console
@@ -16,8 +17,8 @@ editor_options:
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.width = 12,
-  fig.asp = 0.618,
+  # fig.width = 12,
+  # fig.asp = 0.618,
   fig.align ='center'
 )
 ```
@@ -43,6 +44,9 @@ sessionInfo()
 
 # For parallel processing
 options(mc.cores = parallel::detectCores()) 
+
+# Load cache
+# qwraps2::lazyload_cache_dir(path = "R/analysis/03_catch_curves_fit_cache/html")
 ```
 
 ### Read data
@@ -54,47 +58,52 @@ d <- read.csv("data/for_fitting/catch_curve_dat.csv")
 See this for notation: https://solomonkurz.netlify.app/post/2020-12-09-multilevel-models-and-the-index-variable-approach/ 
 Fitting models of log catch ~ age with interactive or additive effects of area, using catch year as a random effect
 ```{r fit models}
-prior0 <-
-  prior(normal(0, 10), class = "b") +
-  prior(gamma(2, 0.1), class = "nu") +
-  prior(student_t(3, 0, 2.5), class = "sd") +
-  prior(student_t(3, 0, 2.5), class = "sigma")
+mtest <- brm(
+  log_cpue ~ 0 + age * area2 + (0 + area2|cohort),          
+  family = student(), data = d, iter = 1, cores = 1, chains = 1,
+  seed = 9
+  )
+
+prior_summary(mtest)
 
 # No random slopes (same slopes for all years, but still area-specific)
 m0 <- brm(
-  log_cpue ~ -1 + age * area2 + (0 + area2||cohort),          
+  log_cpue ~ 0 + age * area2 + (0 + area2|cohort),          
   family = student(), data = d, iter = 4000, cores = 3, chains = 3,
-  seed = 9,
-  save_pars = save_pars(all = TRUE),
-  prior = prior0,
+  seed = 9
   )
 
 summary(m0)
-loo_m0 <- loo(m0, moment_match = TRUE)
+loo_m0 <- loo(m0)
 
 # Area-specific slopes that also vary by year (uncorrelated random effects)
 m1 <- brm(
-  log_cpue ~ -1 + age * area2 + (0 + area2*age||cohort),
+  log_cpue ~ 0 + age * area2 + (0 + area2*age|cohort),
   family = student(), data = d, iter = 4000, cores = 3, chains = 3,
-  seed = 9,
-  save_pars = save_pars(all = TRUE),
-  prior = prior0,
-  control = list(adapt_delta = 0.99)
+  seed = 9, control = list(adapt_delta = 0.99)
   )
 
 summary(m1)
-loo_m1 <- loo(m1, moment_match = TRUE)
+loo_m1 <- loo(m1)
+```
+
+```{r}
+# library(lme4)
+# 
+# m0 <- lmer(
+#   log_cpue ~ 0 + age * area2 + (0 + age*area2|cohort),
+#   data = d
+#   )
+# 
+# print(m0)
+# summary(m0)
+# 
+# equatiomatic::extract_eq(m0, intercept = "beta")
 ```
 
 ### Compare models
 ```{r compare models}
-# Check how bad they are. I think ok for now, below 0.7 at least
-plot(loo_m1, diagnostic = c("k", "n_eff"), label_points = TRUE)
-
 loo_compare(loo_m0, loo_m1)
-# elpd_diff se_diff
-# m1  0.0       0.0   
-# m0 -0.6       2.4 
 ```
 
 ### Produce figures
@@ -102,7 +111,7 @@ loo_compare(loo_m0, loo_m1)
 ```{r main figures}
 pal <- rev(brewer.pal(n = 6, name = "Paired")[c(2, 6)])
 
-as.data.frame(fixef(m1)) # Extract "fixed" effects from m1 for plotting the equation 
+as.data.frame(fixef(m0)) # Extract "fixed" effects from m0 for plotting the equation 
 
 d <- d %>% mutate(area_plot = ifelse(area2 == "Warm", "Heat", "Ref"))
 
@@ -111,7 +120,7 @@ pcc <- d %>%
   data_grid(age = seq_range(age, by = 1),
             area2 = c("Warm", "Cold")) %>%
   mutate(area_plot = ifelse(area2 == "Warm", "Heat", "Ref")) %>% 
-  add_predicted_draws(m1, re_formula = NA) %>%
+  add_predicted_draws(m0, re_formula = NA) %>%
   ggplot(aes(factor(age), y = log_cpue, color = area_plot, fill = area_plot)) +
   stat_lineribbon(aes(y = .prediction), .width = c(.90, .50), alpha = 0.25, size = 0.5) +
   geom_jitter(data = d, aes(factor(age), y = log_cpue, fill = area_plot),
@@ -119,14 +128,14 @@ pcc <- d %>%
   stat_lineribbon(aes(y = .prediction), .width = 0, alpha = 0.8, size = 0.5) +
   scale_fill_manual(values = pal) +
   scale_color_manual(values = pal) +
-  labs(color = "Area", fill = "Area", x = "Age [yrs]", y = "Log(CPUE)") +
+  labs(color = "Area", fill = "Area", x = "Age [yrs]", y = "log(CPUE)") +
   guides(color = guide_legend(override.aes = list(linetype = 0, size = 2, shape = 16, alpha = 0.5,
                                                   color = pal, fill = NA))) +
   annotate("text", 2.1, -2.65, label = paste("n=", nrow(d), sep = ""), size = 2.5) +
   annotate("text", 2.1, -3.1, size = 2.5, color = pal[2],
-           label = paste("y=4.66-0.63×age; Z=0.63 [0.57, 0.68]", sep = ""), fontface = "italic") + # Cold
+           label = paste("y=4.64-0.62×age; Z=0.62", sep = ""), fontface = "italic") + # Cold
   annotate("text", 2.1, -3.65, size = 2.5, color = pal[1],
-           label = paste("y=3.75-0.75×age; Z=0.75 [0.67, 0.82]", sep = ""), fontface = "italic") + # Warm
+           label = paste("y=3.65-0.73×age; Z=0.73", sep = ""), fontface = "italic") + # Warm
   theme(text = element_text(size = 12), 
         legend.position = c(0.9, 0.9),
         legend.spacing.y = unit(0, 'cm'),
@@ -140,7 +149,7 @@ pcc
 
 # https://bookdown.org/content/3890/interactions.html
 # http://mjskay.github.io/tidybayes/articles/tidy-brms.html
-post_slope <- m1 %>%
+post_slope <- m0 %>%
   spread_draws(b_age, `b_age:area2Warm`) %>%
   mutate(b_age_cold2 = b_age*-1,
          b_age_warm2 = b_age*-1 + `b_age:area2Warm`*-1) %>%
@@ -158,8 +167,8 @@ post_slope <- m1 %>%
         legend.key.size = unit(0.2, "cm"),
         legend.background = element_blank())
 
-summary(m1)
-diff <- m1 %>%
+summary(m0)
+diff <- m0 %>%
   spread_draws(b_age, `b_age:area2Warm`) %>%
   mutate(b_age_cold2 = b_age*-1,
          b_age_warm2 = b_age*-1 + `b_age:area2Warm`*-1) %>%
@@ -172,12 +181,14 @@ prop_diff <- summarise(diff, Proportion_of_the_difference_below_0 = sum(diff < 0
 # <dbl>
 #   1                               0.0005
 
+round(prop_diff, 4)
+
 post_diff <- diff %>%
   ggplot(aes(x = diff, fill = stat(x > 0))) +
   stat_halfeye(alpha = 0.5, size = 5, .width = 0) +
   guides(fill = guide_legend(override.aes = list(size = 1, shape = NA, linetype = 0)), color = "none") + 
   scale_fill_manual(values = c("grey10", "grey70")) +
-  annotate("text", 0.14, 0.95, size = 3.5, label = paste("prop. diff<0=", round(prop_diff, 4), sep = "")) +
+  #annotate("text", 0.14, 0.95, size = 3.5, label = paste("prop. diff<0=", round(prop_diff, 4), sep = "")) +
   labs(x = expression(~italic(Z)[heat]~-~italic(Z)[ref])) +
   theme(legend.position = c(0.2, 0.7),
         legend.text = element_text(size = 10),
@@ -187,48 +198,49 @@ post_diff <- diff %>%
 
 pcc / (post_slope | post_diff)  + plot_annotation(tag_levels = 'A')
 
-ggsave("figures/catch_curve.png", width = 5.5, height = 6.5, dpi = 600)
+#ggsave("figures/catch_curve.png", width = 5.5, height = 6.5, dpi = 600)
+ggsave("figures/catch_curve.pdf", width = 20, height = 20, unit = "cm")
 ```
 
 #### Supporting figures
 Random year effects
 ```{r random year effects}
-# http://mjskay.github.io/tidybayes/articles/tidy-brms.html
-get_variables(m1)
-
-# Plotting together...
-cold_slope_df <- m1 %>%
-  spread_draws(b_age, r_cohort[cohort, age]) %>% # Extract random effects and global effects
-  filter(age %in% c("age")) %>% # Filter the correct parameters. For some reason, I get all levels of r_year when I include multiple parameters, not when I do only r_year[year, age]
-  mutate(mean_slope = b_age,
-         Area = "Cold") %>%
-  mutate(slopes = mean_slope + r_cohort) 
-
-warm_slope_df <- m1 %>%
-  spread_draws(b_age, `b_age:area2Warm`, r_cohort[cohort, age]) %>% # Extract random effects and global effects
-  filter(age %in% c("age", "area2Warm:age")) %>% # Filter the correct parameters. Because the warm slope is an offset, I need also the cold slope. For some reason, I get all levels of r_year when I include multiple parameters, not when I do only r_year[year, age]
-  mutate(mean_slope = (b_age + `b_age:area2Warm`),
-         Area = "Warm") %>% # Calculate the average warm slope (not it's a difference to the b_age, i.e. the cold slope)
-  filter(age == "area2Warm:age") %>% # Filter only draws corresponding to the random effect that is the warm slope (not the cold slope)
-  mutate(slopes = mean_slope + r_cohort)
-
-full_df <- bind_rows(cold_slope_df, warm_slope_df)
-
-p_random <- full_df %>% 
-  mutate(Z = slopes*-1) %>% # Convert from slopes to Z
-  ggplot(., aes(y = factor(cohort), x = Z, fill = factor(Area), color = factor(Area))) +
-  geom_vline(xintercept = c(0.63, 0.75), color = rev(pal), linetype = 2, alpha = 0.4, size = 0.5) +
-  stat_slab(alpha = 0.13, position = position_nudge(y = 0.05), color = NA) + 
-  stat_pointinterval(.width = c(.95), position = position_dodge(width = 0.25),
-                     size = 0.1, alpha = 0.8) +
-  scale_fill_manual(values = rev(pal)) +
-  scale_color_manual(values = rev(pal)) +
-  labs(y = "Cohort", x = expression(italic(Z))) + 
-  guides(fill = F, color = F) +
-  coord_cartesian(xlim = c(0.46, 0.88)) +
-  theme(text = element_text(size = 12))
-
-ggsave("figures/supp/catch_curves_random_slopes.png", width = 6.5, height = 6.5, dpi = 600)  
+# # http://mjskay.github.io/tidybayes/articles/tidy-brms.html
+# get_variables(m0)
+# 
+# # Plotting together...
+# cold_slope_df <- m0 %>%
+#   spread_draws(b_age, r_cohort[cohort, age]) %>% # Extract random effects and global effects
+#   filter(age %in% c("age")) %>% # Filter the correct parameters. For some reason, I get all levels of r_year when I include multiple parameters, not when I do only r_year[year, age]
+#   mutate(mean_slope = b_age,
+#          Area = "Cold") %>%
+#   mutate(slopes = mean_slope + r_cohort) 
+# 
+# warm_slope_df <- m0 %>%
+#   spread_draws(b_age, `b_age:area2Warm`, r_cohort[cohort, age]) %>% # Extract random effects and global effects
+#   filter(age %in% c("age", "area2Warm:age")) %>% # Filter the correct parameters. Because the warm slope is an offset, I need also the cold slope. For some reason, I get all levels of r_year when I include multiple parameters, not when I do only r_year[year, age]
+#   mutate(mean_slope = (b_age + `b_age:area2Warm`),
+#          Area = "Warm") %>% # Calculate the average warm slope (not it's a difference to the b_age, i.e. the cold slope)
+#   filter(age == "area2Warm:age") %>% # Filter only draws corresponding to the random effect that is the warm slope (not the cold slope)
+#   mutate(slopes = mean_slope + r_cohort)
+# 
+# full_df <- bind_rows(cold_slope_df, warm_slope_df)
+# 
+# p_random <- full_df %>% 
+#   mutate(Z = slopes*-1) %>% # Convert from slopes to Z
+#   ggplot(., aes(y = factor(cohort), x = Z, fill = factor(Area), color = factor(Area))) +
+#   geom_vline(xintercept = c(0.63, 0.75), color = rev(pal), linetype = 2, alpha = 0.4, size = 0.5) +
+#   stat_slab(alpha = 0.13, position = position_nudge(y = 0.05), color = NA) + 
+#   stat_pointinterval(.width = c(.95), position = position_dodge(width = 0.25),
+#                      size = 0.1, alpha = 0.8) +
+#   scale_fill_manual(values = rev(pal)) +
+#   scale_color_manual(values = rev(pal)) +
+#   labs(y = "Cohort", x = expression(italic(Z))) + 
+#   guides(fill = F, color = F) +
+#   coord_cartesian(xlim = c(0.46, 0.88)) +
+#   theme(text = element_text(size = 12))
+# 
+# ggsave("figures/supp/catch_curves_random_slopes.pdf", width = 20, height = 20, unit = "cm")  
 ```
 
 Model diagnostics & fit
@@ -236,13 +248,13 @@ Model diagnostics & fit
 pal_diag <- rev(brewer.pal(n = 3, name = "Dark2"))
 
 # Chain convergence
-posterior <- as.array(m1)
+posterior <- as.array(m0)
 dimnames(posterior)
 
 d1 <- mcmc_trace(posterior,
-                 pars = c("b_age", "b_area2Cold", "b_area2Warm", 
-                          "b_age:area2Warm", "sd_cohort__area2Cold", "sd_cohort__area2Warm",
-                          "sd_cohort__age", "sd_cohort__area2Warm:age", "nu", "sigma"),
+                 pars = c("b_age", "b_area2Cold", "b_area2Warm", "b_age:area2Warm",
+                          "sd_cohort__area2Cold", "sd_cohort__area2Warm",
+                          "sigma", "nu"),
                  facet_args = list(ncol = 3, strip.position = "left")) + 
   theme(text = element_text(size = 12),
         strip.text = element_text(size = 6),
@@ -251,26 +263,26 @@ d1 <- mcmc_trace(posterior,
 
 # Resid vs fitted
 d2 <- d %>%
-  add_residual_draws(m1) %>%
+  add_residual_draws(m0) %>%
   ggplot(aes(x = .row, y = .residual)) +
   stat_pointinterval(alpha = 0.5, size = 0.7) + 
   theme(text = element_text(size = 12))
 
 # qq-plot
 # d3 <- d %>%
-#   add_residual_draws(m1) %>%
+#   add_residual_draws(m0) %>%
 #   median_qi() %>%
 #   ggplot(aes(sample = .residual)) +
 #   geom_qq_line() +
 #   geom_qq(alpha = 0.8) +
 #   theme(text = element_text(size = 12))
 
-summary(m1)$spec_pars
-nu <- summary(m1)$spec_pars[2, 1]
+summary(m0)$spec_pars
+nu <- summary(m0)$spec_pars[2, 1]
 nu
 
 d3 <- d %>%
-  add_residual_draws(m1) %>%
+  add_residual_draws(m0) %>%
   median_qi() %>%
   ggplot(aes(sample = .residual)) +
   geom_qq_line(distribution = qt, dparams = nu) +
@@ -278,16 +290,16 @@ d3 <- d %>%
   theme(text = element_text(size = 12))
 
 # Posterior predictive
-d4 <- pp_check(m1) + 
+d4 <- pp_check(m0) + 
   theme(text = element_text(size = 12),
         legend.position = c(0.15, 0.95),
         legend.background = element_rect(fill = NA)) + 
   scale_color_manual(values = rev(pal_diag)) +
-  labs(color = "")
+  labs(color = "", x = "log(CPUE)")
 
 d1 / (d2 / (d3 + d4)) + 
   plot_annotation(tag_levels = 'A')
 
-ggsave("figures/supp/catch_curve_diag_fit.png", width = 6.5, height = 8.5, dpi = 600)
+ggsave("figures/supp/catch_curve_diag_fit.pdf", width = 20, height = 20, unit = "cm")
 ```
 
