--- a/R/analysis/05_mean_size_fit.Rmd
+++ b/R/analysis/05_mean_size_fit.Rmd
@@ -122,7 +122,6 @@ m <- lmer(
 
 equatiomatic::extract_eq(m)
 
-
 equatiomatic::extract_eq(m)
 
 summary(m)
@@ -171,6 +170,10 @@ pp_check(m1, type = "hist")
 ```
 
 ```{r}
+# A cheat sheet for prediciton:
+# https://www.andrewheiss.com/blog/2022/09/26/guide-visualizing-types-posteriors/#tldr-diagrams-and-cheat-sheets
+  
+  
 pal <- rev(brewer.pal(n = 6, name = "Paired")[c(2, 6)])
 
 get_variables(m1)
@@ -207,13 +210,30 @@ size_data / age_data
 ggsave("figures/supp/mean_size.pdf", width = 20, height = 20, unit = "cm")
 
 # Main plot
-diff_size <- m1 %>%
-  spread_draws(b_areaBT, b_areaFM) %>%
-  mutate(diff = exp(b_areaBT) - exp(b_areaFM))
+# Calculate .epred differences between areas in size and age
+size <- tibble(area = c("BT", "FM")) %>%
+  add_epred_draws(m1, re_formula = NA) %>%
+  ungroup() %>% 
+  dplyr::select(-.row, -.chain, -.iteration)
+  
+size_BT <- size %>% filter(area == "BT") %>% rename(BT_pred = .epred) %>% dplyr::select(-area)
+size_FM <- size %>% filter(area == "FM") %>% rename(FM_pred = .epred) %>% dplyr::select(-area)
 
-diff_age <- m2 %>%
-  spread_draws(b_areaBT, b_areaFM) %>%
-  mutate(diff = exp(b_areaBT) - exp(b_areaFM))
+diff_size <- size_BT %>% 
+  left_join(size_FM, by = ".draw") %>% 
+  mutate(diff = BT_pred - FM_pred)
+
+age <- tibble(area = c("BT", "FM")) %>%
+  add_epred_draws(m2, re_formula = NA) %>%
+  ungroup() %>% 
+  dplyr::select(-.row, -.chain, -.iteration)
+  
+age_BT <- age %>% filter(area == "BT") %>% rename(BT_pred = .epred) %>% dplyr::select(-area)
+age_FM <- age %>% filter(area == "FM") %>% rename(FM_pred = .epred) %>% dplyr::select(-area)
+
+diff_age <- age_BT %>% 
+  left_join(age_FM, by = ".draw") %>% 
+  mutate(diff = BT_pred - FM_pred)
 
 post_diff_size <- diff_size %>%
   ggplot(aes(x = diff, fill = stat(x > 0))) +
@@ -241,8 +261,6 @@ post_diff_age <- diff_age %>%
         legend.key.size = unit(0.2, "cm"),
         legend.background = element_blank())
 
-post_diff_age
-
 mean_size <- df_mean_size %>%
   data_grid(area = c("BT", "FM")) %>%
   add_predicted_draws(m1, re_formula = NA) %>%
@@ -252,7 +270,7 @@ mean_size <- df_mean_size %>%
   geom_boxplot(width = 0.1, fill = "white", color = "grey30", size = 0.4) +
   scale_fill_manual(values = pal) +
   scale_color_manual(values = pal) +
-  scale_y_continuous(trans = "log10") +
+  #scale_y_continuous(trans = "log", breaks = seq(5, 45, 5)) +
   labs(color = "Area", fill = "Area", x = "", y = "Body size [cm]") +
   guides(fill = "none") +
   theme(text = element_text(size = 12), 
@@ -271,7 +289,7 @@ mean_age <- df_mean_age %>%
   geom_boxplot(width = 0.1, fill = "white", color = "grey30", size = 0.4) +
   scale_fill_manual(values = pal) +
   scale_color_manual(values = pal) +
-  scale_y_continuous(trans = "log10") +
+  #scale_y_continuous(trans = "log", breaks = seq(1, 16, 2)) +
   labs(color = "Area", fill = "Area", x = "", y = "Age [yrs]") +
   guides(fill = "none") +
   theme(text = element_text(size = 12), 
